@@ -13,7 +13,6 @@ import org.apache.logging.log4j.Logger;
 
 import java.io.IOException;
 import java.io.OutputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
@@ -82,18 +81,17 @@ class PreLambdaHandler implements HttpHandler {
         return pathParams;
     }
 
-    public static Map<String, String> getQueryStringParams(URI url)
-            throws UnsupportedEncodingException {
-        Map<String, String> query_pairs = new HashMap<>();
+    public static Map<String, String> getQueryStringParams(URI url) {
+        Map<String, String> queryPairs = new HashMap<>();
         String query = url.getQuery();
         String[] pairs = query.split("&");
         for (String pair : pairs) {
             int idx = pair.indexOf("=");
-            query_pairs.put(
-                    URLDecoder.decode(pair.substring(0, idx), "UTF-8"),
-                    URLDecoder.decode(pair.substring(idx + 1), "UTF-8"));
+            queryPairs.put(
+                    URLDecoder.decode(pair.substring(0, idx), StandardCharsets.UTF_8),
+                    URLDecoder.decode(pair.substring(idx + 1), StandardCharsets.UTF_8));
         }
-        return query_pairs;
+        return queryPairs;
     }
 
     private APIGatewayProxyRequestEvent translateRequest(HttpExchange request) throws IOException {
@@ -129,7 +127,7 @@ class PreLambdaHandler implements HttpHandler {
                                 new APIGatewayProxyRequestEvent.ProxyRequestContext()
                                         .withRequestId(requestId));
         String requestQuery = request.getRequestURI().getQuery();
-        LOGGER.info("query retrieved: " + requestQuery);
+        LOGGER.info("query retrieved: {}", requestQuery);
 
         if (requestQuery != null) {
             apiGatewayProxyRequestEvent.setQueryStringParameters(
